--- a/package.json
+++ b/package.json
@@ -1,60 +1,65 @@
 {
-  "name": "taro-demo",
-  "version": "1.0.0",
-  "private": true,
-  "description": "",
-  "templateInfo": {
-    "name": "default",
-    "typescript": false,
-    "css": "sass"
-  },
-  "scripts": {
-    "build:weapp": "taro build --type weapp",
-    "build:swan": "taro build --type swan",
-    "build:alipay": "taro build --type alipay",
-    "build:tt": "taro build --type tt",
-    "build:h5": "taro build --type h5",
-    "build:rn": "taro build --type rn",
-    "build:qq": "taro build --type qq",
-    "build:jd": "taro build --type jd",
-    "build:quickapp": "taro build --type quickapp",
-    "dev:weapp": "npm run build:weapp -- --watch",
-    "dev:swan": "npm run build:swan -- --watch",
-    "dev:alipay": "npm run build:alipay -- --watch",
-    "dev:tt": "npm run build:tt -- --watch",
-    "dev:h5": "npm run build:h5 -- --watch",
-    "dev:rn": "npm run build:rn -- --watch",
-    "dev:qq": "npm run build:qq -- --watch",
-    "dev:jd": "npm run build:jd -- --watch",
-    "dev:quickapp": "npm run build:quickapp -- --watch"
-  },
-  "browserslist": [
-    "last 3 versions",
-    "Android >= 4.1",
-    "ios >= 8"
-  ],
-  "author": "",
-  "dependencies": {
-    "@babel/runtime": "^7.7.7",
-    "@tarojs/components": "3.4.4",
-    "@tarojs/plugin-framework-react": "3.4.4",
-    "@tarojs/react": "3.4.4",
-    "@tarojs/runtime": "3.4.4",
-    "@tarojs/taro": "3.4.4",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.8.0",
-    "@tarojs/mini-runner": "3.4.4",
-    "@tarojs/webpack-runner": "3.4.4",
-    "@types/webpack-env": "^1.13.6",
-    "babel-preset-taro": "3.4.4",
-    "eslint": "^6.8.0",
-    "eslint-config-taro": "3.4.4",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-react": "^7.8.2",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "stylelint": "^14.4.0"
-  }
+	"name": "taro-demo",
+	"version": "1.0.0",
+	"private": true,
+	"description": "",
+	"templateInfo": {
+		"name": "default",
+		"typescript": false,
+		"css": "sass"
+	},
+	"scripts": {
+		"build:weapp": "taro build --type weapp",
+		"build:swan": "taro build --type swan",
+		"build:alipay": "taro build --type alipay",
+		"build:tt": "taro build --type tt",
+		"build:h5": "taro build --type h5",
+		"build:rn": "taro build --type rn",
+		"build:qq": "taro build --type qq",
+		"build:jd": "taro build --type jd",
+		"build:qywx": "taro build --type qywx",
+		"build:quickapp": "taro build --type quickapp",
+		"dev:weapp": "npm run build:weapp -- --watch",
+		"dev:swan": "npm run build:swan -- --watch",
+		"dev:alipay": "npm run build:alipay -- --watch",
+		"dev:tt": "npm run build:tt -- --watch",
+		"dev:h5": "npm run build:h5 -- --watch",
+		"dev:rn": "npm run build:rn -- --watch",
+		"dev:qq": "npm run build:qq -- --watch",
+		"dev:jd": "npm run build:jd -- --watch",
+		"dev:quickapp": "npm run build:quickapp -- --watch"
+	},
+	"browserslist": [
+		"last 3 versions",
+		"Android >= 4.1",
+		"ios >= 8"
+	],
+	"author": "",
+	"dependencies": {
+		"@babel/runtime": "^7.7.7",
+		"@tarojs/components": "3.4.6",
+		"@tarojs/plugin-framework-react": "^3.4.7",
+		"@tarojs/plugin-html": "^3.4.8",
+		"@tarojs/plugin-platform-weapp-qy": "^0.0.9",
+		"@tarojs/react": "3.4.6",
+		"@tarojs/runtime": "3.4.6",
+		"@tarojs/taro": "3.4.6",
+		"react": "^18.0.0",
+		"react-dom": "^18.0.0",
+		"react-router-dom": "^6.3.0"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.8.0",
+		"@tarojs/mini-runner": "3.4.6",
+		"@tarojs/webpack-runner": "3.4.6",
+		"@types/react": "^18.0.5",
+		"@types/webpack-env": "^1.13.6",
+		"babel-preset-taro": "3.4.6",
+		"eslint": "^6.8.0",
+		"eslint-config-taro": "3.4.6",
+		"eslint-plugin-import": "^2.12.0",
+		"eslint-plugin-react": "^7.8.2",
+		"eslint-plugin-react-hooks": "^4.2.0",
+		"stylelint": "^14.4.0"
+	}
 }
