--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
 		"@tarojs/taro": "3.4.6",
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
-		"react-router-dom": "^6.3.0"
+		"react-router-dom": "^6.3.0",
+		"tard": "^0.0.2-alpha.11"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.8.0",
